tests/ui/lifetimes/static-impl-obligation.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/static-impl-obligation.rs:222:10
   |
LL |     impl MyTrait for dyn ObjectTrait + '_ {}
   |          ^^^^^^^
   |
note: lifetime parameter instantiated with the anonymous lifetime as defined here
  --> $DIR/static-impl-obligation.rs:222:40
   |
LL |     impl MyTrait for dyn ObjectTrait + '_ {}
   |                                        ^^
   = note: but lifetime parameter must outlive the static lifetime
note: `'static` requirement introduced here
  --> $DIR/static-impl-obligation.rs:215:31
   |
LL |     trait MyTrait where Self: 'static {
   |                               ^^^^^^^

error[E0521]: borrowed data escapes outside of function
  --> $DIR/static-impl-obligation.rs:225:9
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |               --  --- `val` is a reference that is only valid in the function body
   |               |
   |               lifetime `'a` defined here
LL |         val.use_self()
   |         ^^^^^^^^^^^^^^
   |         |
   |         `val` escapes the function body here
   |         argument requires that `'a` must outlive `'static`
   |
note: the `impl` on `dyn t::ObjectTrait` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:215:31
   |
LL |     trait MyTrait where Self: 'static {
   |                               ^^^^^^^
LL |         fn use_self(&self) -> &() where Self: 'static { panic!() }
   |                                               ^^^^^^^

error[E0521]: borrowed data escapes outside of function
  --> $DIR/static-impl-obligation.rs:243:9
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |               --  --- `val` is a reference that is only valid in the function body
   |               |
   |               lifetime `'a` defined here
LL |         val.use_self()
   |         ^^^^^^^^^^^^^^
   |         |
   |         `val` escapes the function body here
   |         argument requires that `'a` must outlive `'static`
   |
note: the `impl` on `dyn u::ObjectTrait` has a `'static` lifetime requirement
  --> $DIR/static-impl-obligation.rs:234:47
   |
LL |         fn use_self(&self) -> &() where Self: 'static { panic!() }
   |                                               ^^^^^^^

error[E0521]: borrowed data escapes outside of function
  --> $DIR/static-impl-obligation.rs:261:9
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |               --  --- `val` is a reference that is only valid in the function body
   |               |
   |               lifetime `'a` defined here
LL |         val.use_self()
   |         ^^^^^^^^^^^^^^
   |         |
   |         `val` escapes the function body here
   |         argument requires that `'a` must outlive `'static`
   |
note: the used `impl` has a `'static` requirement
  --> $DIR/static-impl-obligation.rs:258:26
   |
LL |         fn use_self(&'static self) -> &() { panic!() }
   |            -------- calling this method introduces the `impl`'s `'static` requirement
...
LL |     impl MyTrait for dyn ObjectTrait {}
   |                          ^^^^^^^^^^^ this has an implicit `'static` lifetime requirement
note: the `impl` on `(dyn v::ObjectTrait + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:251:31
   |
LL |     trait MyTrait where Self: 'static {
   |                               ^^^^^^^
LL |         fn use_self(&'static self) -> &() { panic!() }
   |                     ^^^^^^^^^^^^^
...
LL |     impl MyTrait for dyn ObjectTrait {}
   |                      ^^^^^^^^^^^^^^^

error[E0478]: lifetime bound not satisfied
  --> $DIR/static-impl-obligation.rs:270:10
   |
LL |     impl Trait for dyn Foo + '_ {
   |          ^^^^^
   |
note: lifetime parameter instantiated with the anonymous lifetime as defined here
  --> $DIR/static-impl-obligation.rs:270:30
   |
LL |     impl Trait for dyn Foo + '_ {
   |                              ^^
   = note: but lifetime parameter must outlive the static lifetime
note: `'static` requirement introduced here
  --> $DIR/static-impl-obligation.rs:268:29
   |
LL |     trait Trait where Self: 'static { fn hello(&self) {} }
   |                             ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:9:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
help: consider relaxing the implicit `'static` requirement on the impl
   |
LL |     impl dyn Foo + '_ {
   |                  ++++

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:20:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn b::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:15:10
   |
LL |     impl dyn Foo {
   |          ^^^^^^^
LL |         fn hello(&'static self) {}
   |                  ^^^^^^^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:31:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn c::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:26:10
   |
LL |     impl dyn Foo {
   |          ^^^^^^^
LL |         fn hello(&'static self) where Self: 'static {}
   |                  ^^^^^^^^^^^^^              ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:42:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn d::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:37:10
   |
LL |     impl dyn Foo {
   |          ^^^^^^^
LL |         fn hello(&self) where Self: 'static {}
   |                                     ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:53:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
help: consider relaxing this `'static` requirement
   |
LL |     impl dyn Foo + '_ {
   |                    ~~

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:64:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn f::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:59:20
   |
LL |     impl dyn Foo + 'static {
   |                    ^^^^^^^
LL |         fn hello(&'static self) {}
   |                  ^^^^^^^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:75:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn g::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:70:20
   |
LL |     impl dyn Foo + 'static {
   |                    ^^^^^^^
LL |         fn hello(&'static self) where Self: 'static {}
   |                  ^^^^^^^^^^^^^              ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:86:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn h::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:81:20
   |
LL |     impl dyn Foo + 'static {
   |                    ^^^^^^^
LL |         fn hello(&self) where Self: 'static {}
   |                                     ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:97:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn i::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:92:10
   |
LL |     impl dyn Foo where Self: 'static {
   |          ^^^^^^^             ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:108:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn j::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:103:10
   |
LL |     impl dyn Foo where Self: 'static {
   |          ^^^^^^^             ^^^^^^^
LL |         fn hello(&'static self) {}
   |                  ^^^^^^^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:119:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn k::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:114:10
   |
LL |     impl dyn Foo where Self: 'static {
   |          ^^^^^^^             ^^^^^^^
LL |         fn hello(&'static self) where Self: 'static {}
   |                  ^^^^^^^^^^^^^              ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:130:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn l::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:125:10
   |
LL |     impl dyn Foo where Self: 'static {
   |          ^^^^^^^             ^^^^^^^
LL |         fn hello(&self) where Self: 'static {}
   |                                     ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:141:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn m::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:136:20
   |
LL |     impl dyn Foo + 'static where Self: 'static {
   |                    ^^^^^^^             ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:152:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn n::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:147:20
   |
LL |     impl dyn Foo + 'static where Self: 'static {
   |                    ^^^^^^^             ^^^^^^^
LL |         fn hello(&'static self) {}
   |                  ^^^^^^^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:163:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn o::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:158:20
   |
LL |     impl dyn Foo + 'static where Self: 'static {
   |                    ^^^^^^^             ^^^^^^^
LL |         fn hello(&'static self) where Self: 'static {}
   |                  ^^^^^^^^^^^^^              ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:174:9
   |
LL |     fn bar<'a>(x: &'a &'a u32) {
   |            -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `(dyn p::Foo + 'static)` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:169:20
   |
LL |     impl dyn Foo + 'static where Self: 'static {
   |                    ^^^^^^^             ^^^^^^^
LL |         fn hello(&self) where Self: 'static {}
   |                                     ^^^^^^^

error[E0521]: borrowed data escapes outside of function
  --> $DIR/static-impl-obligation.rs:183:9
   |
LL |     fn bar<'a>(x: &'a &'a Foo) {
   |            --  - `x` is a reference that is only valid in the function body
   |            |
   |            lifetime `'a` defined here
LL |         x.hello();
   |         ^^^^^^^^^
   |         |
   |         `x` escapes the function body here
   |         argument requires that `'a` must outlive `'static`
   |
note: the `impl` on `q::Foo` has a `'static` lifetime requirement
  --> $DIR/static-impl-obligation.rs:180:18
   |
LL |         fn hello(&'static self) {}
   |                  ^^^^^^^^^^^^^

error[E0521]: borrowed data escapes outside of function
  --> $DIR/static-impl-obligation.rs:192:9
   |
LL |     fn bar<'a>(x: &'a &'a Foo) {
   |            --  - `x` is a reference that is only valid in the function body
   |            |
   |            lifetime `'a` defined here
LL |         x.hello();
   |         ^^^^^^^^^
   |         |
   |         `x` escapes the function body here
   |         argument requires that `'a` must outlive `'static`
   |
note: the `impl` on `r::Foo` has `'static` lifetime requirements
  --> $DIR/static-impl-obligation.rs:189:18
   |
LL |         fn hello(&'static self) where Self: 'static {}
   |                  ^^^^^^^^^^^^^              ^^^^^^^

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:207:9
   |
LL |     fn convert<'a>(x: &'a &'a u32) {
   |                -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
help: consider relaxing the implicit `'static` requirement on the impl
   |
LL |     impl Trait for dyn Foo + '_ {
   |                            ++++

error: lifetime may not live long enough
  --> $DIR/static-impl-obligation.rs:276:9
   |
LL |     fn convert<'a>(x: &'a &'a u32) {
   |                -- lifetime `'a` defined here
LL |         let y: &dyn Foo = x;
   |                           - cast requires that `'a` must outlive `'static`
LL |         y.hello();
   |         ^^^^^^^^^ calling this method introduces a `'static` lifetime requirement
   |
note: the `impl` on `dyn w::Foo` has a `'static` lifetime requirement
  --> $DIR/static-impl-obligation.rs:268:29
   |
LL |     trait Trait where Self: 'static { fn hello(&self) {} }
   |                             ^^^^^^^

error: aborting due to 25 previous errors

Some errors have detailed explanations: E0478, E0521.
For more information about an error, try `rustc --explain E0478`.
